[package]
name = "coding_challenges"
version = "0.1.0"
edition = "2021"

[dependencies]
crossbeam = "0.8.4"


[dev-dependencies]
criterion = { version = "0.5.1", features = ["html_reports"] }

[[bench]]
name = "value_not_counting_between_threads_benchmark"
harness = false

[[bench]]
name = "two_sum_benchmark"
harness = false
