[package]
name = "coding_challenges"
version = "0.1.0"
edition = "2021"

[dependencies]
chrono = "0.4.40"
tokio = { version = "1.44.2", features = ["full"] }


[dev-dependencies]
criterion = { version = "0.5.1", features = ["html_reports"] }

[[bench]]
name = "value_not_counting_between_threads_benchmark"
harness = false

[[bench]]
name = "two_sum_benchmark"
harness = false
